--- a/index.html
+++ b/index.html
@@ -196,11 +196,12 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 70%;
-  height: 70%;
+  width: 100%;
+  height: 100%;
   
   /* Görseli kutuya sığdırmak için: */
-  object-fit: contain; /* EN BOY ORANINI koruyarak kutuya sığdırır */
+  /* object-fit: contain; /* EN BOY ORANINI koruyarak kutuya sığdırır */
+  object-scale: 80%;
   object-position: center; /* Resmi ortalar */
 
   display: block;
@@ -568,6 +569,7 @@
 </body>
 
 </html>
+
 
 
 
