--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
   height: 100%;
   
   /* Görseli kutuya sığdırmak için: */
-  /* object-fit: contain; /* EN BOY ORANINI koruyarak kutuya sığdırır */
-  object-scale: 80%;
+  object-fit: contain; /* EN BOY ORANINI koruyarak kutuya sığdırır */
   object-position: center; /* Resmi ortalar */
 
   display: block;
@@ -569,6 +568,7 @@
 </body>
 
 </html>
+
 
 
 
