--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       font-family: "Inter", sans-serif;
 
-      color: #fff;
+      color: #000;
 
       overflow-x: hidden;
 
@@ -159,10 +159,7 @@
 #gallery {
   display: grid;
   gap: 10px; /* Öğeler arası eşit boşluk */
-  /*padding: 50px;*/
-  width: 100%; 
-  padding-top: 100%; /* Yüksekliği genişliğe eşitle (1:1 en boy oranı) */
-  position: relative; 
+  padding: 50px;
 }
 
 /* Dikey ekran (9:16) → 2 sütun */
@@ -182,6 +179,7 @@
 /* Fotoğraf kutularının kare olmasını sağla */
 .photo-box {
   background: #000; /* Boş kalan kısımlar siyah olacak */
+  padding: 20px;
   overflow: hidden;
   border-radius: 0px;
   
@@ -576,6 +574,7 @@
 </body>
 
 </html>
+
 
 
 
