--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 
 
     .photo-box img:hover {
-
-      transform: scale(1.03);
+background: #111;
+      /*transform: scale(1.03);*/
 
     }
 
@@ -573,6 +573,7 @@
 </body>
 
 </html>
+
 
 
 
