Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ background: #111;
 
       gallery.innerHTML = "Yükleniyor...";
 
-      fetch(`Galeri/${album}/index.json`)
+      fetch(`Galeri/${album}/albums.json`)
 
         .then(res => res.json())
 
@@ -573,6 +573,7 @@ background: #111;
 </body>
 
 </html>
+
 
 
 
