--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ background: #111;
 
     // Albümleri yükle
 
-    fetch("Galeri/albums.json")
+    fetch("Galeri/index.json")
 
       .then(res => res.json())
 
@@ -573,6 +573,7 @@ background: #111;
 </body>
 
 </html>
+
 
 
 
